--- a/WinFormsApp1.csproj
+++ b/WinFormsApp1.csproj
@@ -2,8 +2,10 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <UseWindowsForms>true</UseWindowsForms>
+    <AssemblyName>Explorer</AssemblyName>
+    <RootNamespace>WinFormsApp1</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
